--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,6 +3,10 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
 .box {
@@ -10,6 +14,8 @@
   font-weight: bold;
   text-align: center;
   border: 6px solid maroon;
+  align-content: center;
   width: 80px;
   height: 80px;
+  flex: 0 0 auto;
 }
