--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,30 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-info {
+  display: flex;
+  flex-direction: row;
+}
+
+.modal-text {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  margin-left: 15px;
+  gap: 8px;
+}
+
+.header {
+  font-weight: 800;
+}
+
+.text {
+  padding-bottom: 10px;
 }
 
 .icon {
@@ -33,6 +57,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
