--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -3,8 +3,55 @@
 body {
   height: 100vh;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  padding: 16spx;
+  width: 100%;
+}
+
+.footer {
+  background-color: #eeeeeeee;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  flex: auto;
 }
 
 img {
